@@ -1,3 +1,9 @@
+*redmine-2.4.5 (18 Apr 2014)
+
+  18 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +redmine-2.4.5.ebuild,
+  redmine-2.5.1.ebuild:
+  [www-apps/redmine] Add redmine-2.4.5, add missing dep.
+
 *redmine-2.5.1 (31 Mar 2014)
 
   31 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +files/10_redmine_vhost.conf,
